Enhanced Bulk Product Page

--- a/Sukhdari_Client/Pages/SpecificStore.razor
+++ b/Sukhdari_Client/Pages/SpecificStore.razor
@@ -34,7 +34,7 @@
             <div>
                 <br />
                 <div class="ml-2">
-                    <button class="col-5 mr-1 btn btn-primary" type="submit" @onclick="findProductsByPrice">Search</button>
+                    <button class="btn btn-primary" type="submit" @onclick="findProductsByPrice">Search</button>
                 </div>
             </div>
             <hr />
@@ -89,7 +89,7 @@
                         </div>
                     }
                     <br>
-                    <input class="col-5 btn btn-success" type="reset" value="Reset Attributes" @onclick="ResetAttributes">
+                    <input class="btn btn-success" type="reset" value="Reset Attributes" @onclick="ResetAttributes">
                 </form>
                 attributeValues.Clear(); 
                 <hr />
