--- a/Sukhdari_Server/Pages/Store/AddProducts.razor
+++ b/Sukhdari_Server/Pages/Store/AddProducts.razor
@@ -33,7 +33,7 @@
                 <div class="col-md-7">
                     @* <InputSelect @bind-Value="ProductDetails.CategoryId" class="form-control" @oninput="HandleCategoryChange"> *@
                     <InputSelect @bind-Value="selected_category" TValue="string" class=" form-control" @oninput="HandleCategoryChange">
-                        <option>Select category</option>
+                        <option value="">Select category</option>
                         @foreach (var category in Categories)
                         {
                             <option value="@category.Id">@category.Name</option>
@@ -48,26 +48,29 @@
 
 
     <div class="card-body">
-        <div>
-            <span>Product Bulk Upload CSV Template</span>
-            @* <a href="/Format//BulkProductsTemplate.csv" class="btn btn-outline-success" download>Download Csv Template</a> *@
-            <a href="/Format//BulkProductsTemplate.csv" class="btn btn-outline-success" download>Download Csv Template</a>
-        </div>
-        <div class="mt-5">
-            <span>Product Details CSV File</span>
-            <InputFile OnChange="@HandleCSVFileUpload" accept=".csv" class="form-control"></InputFile>
-        </div>
-        <div class="mt-5">
-            <span><h3>Product Images</h3></span>
-            <InputFile OnChange="@HandleImageUpload" multiple accept=".jpg,.jpeg,.png" class="form-control"></InputFile>
-        </div>
-        <button @onclick="@addProductsInBulk" class="btn btn-primary mt-3">Add</button>
-        @if (errorFileButtonFlag != 0)
+        @if (selected_category != null && selected_category != "")
         {
-            <div class="mt-5">
-                <span>Products failed to add</span>
-                <a href="/Format//ProductsFailed.csv" class="btn btn-outline-success" download>Download</a>
+            <div>
+                <span>Product Bulk Upload CSV Template</span>
+                @* <a href="/Format//BulkProductsTemplate.csv" class="btn btn-outline-success" download>Download Csv Template</a> *@
+                <a href="/Format//BulkProductsTemplate.csv" class="btn btn-outline-success" download>Download Csv Template</a>
             </div>
+            <div class="mt-5">
+                <span>Product Details CSV File</span>
+                <InputFile OnChange="@HandleCSVFileUpload" accept=".csv" class="form-control"></InputFile>
+            </div>
+            <div class="mt-5">
+                <span><h3>Product Images</h3></span>
+                <InputFile OnChange="@HandleImageUpload" multiple accept=".jpg,.jpeg,.png" class="form-control"></InputFile>
+            </div>
+            <button @onclick="@addProductsInBulk" class="btn btn-primary mt-3">Add</button>
+            @if (errorFileButtonFlag == 1)
+            {
+                <div class="mt-5">
+                    <span>Products failed to add</span>
+                    <a href="/Format//ProductsFailed.csv" class="btn btn-outline-success" download>Download</a>
+                </div>
+            }
         }
     </div>
 </div>
@@ -81,11 +84,13 @@
     public int errorFileButtonFlag = 0;
     public CategoryDTO CategoryDetails { get; set; } = new CategoryDTO();
     private List<CategoryAttributesDTO> Attributes = new List<CategoryAttributesDTO>();
-    public string selected_category;
+    public string selected_category = null;
+    public CategoryDTO cat { get; set; }
     public ProductDTO ProductDetails { get; set; } = new ProductDTO();
-    public List<string> commonAttributes = new List<string> { "Product_Name", "Product_Category", "Product_Price", "Discount_Percentage", "Available_Quantity", "Product_Description", "Product_Images" };
+    public List<string> commonAttributes = new List<string> { "Product_Name", "Product_Price", "Discount_Percentage", "Available_Quantity", "Product_Description", "Product_Images" };
     public List<string> columnsInCSV = new List<string>();
     //myCode End
+    public bool fileUploaded { get; set; } = false;
     IReadOnlyList<IBrowserFile> uploadedImages;
     IBrowserFile productDetailsCSV;
     List<string[]> productsCsv = new List<string[]>();
@@ -117,13 +122,15 @@
 
         if (int.TryParse(e.Value.ToString(), out selectedCategoryId))
         {
-            foreach (var category in Categories)
-            {
-                if (category.Id == selectedCategoryId)
-                {
-                    Attributes = category.Attributes;
-                }
-            }
+            cat = Categories.FirstOrDefault(i => i.Id == selectedCategoryId);
+            Attributes = cat.Attributes;
+            // foreach (var category in Categories)
+            // {
+            //     if (category.Id == selectedCategoryId)
+            //     {
+            //         Attributes = category.Attributes;
+            //     }
+            // }
         }
         if (Attributes != null)
         {
@@ -174,6 +181,7 @@
     //---------------------My code Ended-------------------------
     public async Task HandleCSVFileUpload(InputFileChangeEventArgs e)
     {
+        fileUploaded = true;
         var singleFile = e.File;
         var stream = singleFile.OpenReadStream();
         productsCsv = new List<string[]>();
@@ -187,6 +195,10 @@
         {
             productsCsv.Add(SplitCSV(item.ToString()));
         }
+        //removing the last empty row
+        var lastRow = productsCsv[productsCsv.Count - 1];
+        productsCsv.Remove(lastRow);
+
         await JsRuntime.ToastrSuccess("Read");
     }
 
@@ -222,6 +234,12 @@
 
     private async Task addProductsInBulk()
     {
+        if (fileUploaded == false)
+        {
+            await JsRuntime.ToastrError("Kindly upload the product file first.");
+            return;
+        }
+
         string errorMsg = "";
 
         //--------------Code to create a csv file for not added products-----------------------
@@ -268,18 +286,26 @@
                 try
                 {
 
-                    var cat = Categories.FirstOrDefault(i => i.Name.ToLower() == product[1].ToLower());
+                    // var cat = Categories.FirstOrDefault(i => i.Name.ToLower() == selected_category.ToLower());
                     productDTO.CategoryId = cat.Id;
                     productDTO.Name = product[0];
-                    productDTO.Price = float.Parse(product[2]);
-                    productDTO.DiscountPercentage = float.Parse(product[3]);
-                    productDTO.Quantity = int.Parse(product[4]);
-                    productDTO.Description = product[5];
+                    productDTO.Price = float.Parse(product[1]);
+                    productDTO.DiscountPercentage = float.Parse(product[2]);
+                    productDTO.Quantity = int.Parse(product[3]);
+                    productDTO.Description = product[4];
                     productDTO.ClickCount = 0;
                     productDTO.StoreId = store_id;
 
-                    int i = 7;
-                    foreach (var attrb in cat.Attributes)
+                    // foreach(var item in product)
+                    // {
+                    //     if (item == "" || item == null || (item is string && string.IsNullOrEmpty((string)item)))
+                    //     {
+                    //         nullFlag--;
+                    //     }
+                    // }
+
+                    int i = 6;
+                    foreach (var attrb in Attributes)
                     {
                         var attrib = new ProductAttributesDTO { Key = attrb.Key, Value = product[i++], Fixed = true };
                         if (productDTO.Attributes == null)
@@ -292,6 +318,16 @@
                             productDTO.Attributes.Add(attrib);
                         }
                     }
+
+                    // foreach (var attribItem in productDTO.Attributes)
+                    // {
+                    //     if (attribItem == null )
+                    //     {
+                    //         nullFlag--;
+                    //     }
+                    // }
+
+
 
                 }
                 catch (Exception e)
@@ -323,17 +359,17 @@
                         if (productDTO.Price <= 0)
                         {
                             //await JsRuntime.ToastrError("Product price must be graeter than zero.");
-                            errorMsg = errorMsg + "Product price must be greater than zero.";
+                            errorMsg = errorMsg + "Product price must be greater than zero. ";
                         }
-                        if (productDTO.DiscountPercentage < 0 || productDTO.DiscountPercentage > 100)
+                        else if (productDTO.DiscountPercentage < 0 || productDTO.DiscountPercentage > 100)
                         {
                             //await JsRuntime.ToastrError("Discount Percentage must be between 0 and 100.");
-                            errorMsg = errorMsg + "Discount Percentage must be between 0 and 100.";
+                            errorMsg = errorMsg + "Discount Percentage must be between 0 and 100. ";
                         }
-                        if (productDTO.Quantity < 1)
+                        else if(productDTO.Quantity < 1)
                         {
                             //await JsRuntime.ToastrError("Product quantity must be graeter than zero.");
-                            errorMsg = errorMsg + "Product quantity must be greater than zero.";
+                            errorMsg = errorMsg + "Product quantity must be greater than zero. ";
                         }
                         // if (nullFlag < 0)
                         // {
@@ -371,7 +407,7 @@
 
                     try
                     {
-                        var productImagesNames = product[6].Split(":");
+                        var productImagesNames = product[5].Split(":");
                         if (productImagesNames != null && productImagesNames.Count() > 0)
                         {
                             foreach (var product_image_name in productImagesNames)
@@ -409,6 +445,14 @@
                 errorMsg = "";
 
             }
+            if (errorFileButtonFlag == 0)
+            {
+                await JsRuntime.ToastrSuccess("Products added successfully.");
+            }
+            else
+            {
+                await JsRuntime.ToastrError("Some products failed to upload.");
+            }
 
         }
         else
@@ -417,5 +461,3 @@
         }
     }
 }
-
-
